Feat: 优化主程序与字模组整体交互

--- a/modules/header/index.html
+++ b/modules/header/index.html
@@ -26,6 +26,7 @@
     Header模块
     <script>
       document.write(JSON.stringify(window.xIpc.getVersion()));
+      document.write(JSON.stringify(window.xIpc.getModules()));
       document.write(JSON.stringify(window.location.href));
     </script>
   </body>
