--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
     />
-    <link rel="icon" type="image/png" href="icon.png" />
+    <link rel="icon" type="image/png" href="/icon.png" />
     <title>前端模块化客户端模板(web_mods_base)</title>
   </head>
   <body>
